--- a/src/Ui_Files/DockWidgets/Ui/dw_SE.ui
+++ b/src/Ui_Files/DockWidgets/Ui/dw_SE.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>534</width>
-    <height>610</height>
+    <width>528</width>
+    <height>626</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,39 +15,6 @@
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="4" column="5">
-     <widget class="QPushButton" name="plot_pb">
-      <property name="text">
-       <string>Plot</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="4">
-     <widget class="QPushButton" name="fill_cols_pb">
-      <property name="text">
-       <string>Fill Columns</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="2" colspan="2">
-     <widget class="QComboBox" name="plot_type_cb">
-      <item>
-       <property name="text">
-        <string>Ext. Plot (half-ints)</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Ext. Plot (ints)</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>X vs Y</string>
-       </property>
-      </item>
-     </widget>
-    </item>
     <item row="2" column="2" colspan="4">
      <widget class="QTabWidget" name="tabWidget">
       <property name="tabShape">
@@ -61,10 +28,33 @@
         <string>Axis Properties</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_3">
-        <item row="0" column="0" colspan="5">
-         <widget class="QTreeView" name="SE_treeView"/>
+        <item row="11" column="2">
+         <widget class="QComboBox" name="plot_type_cb">
+          <item>
+           <property name="text">
+            <string>Ext. Plot (half-ints)</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Ext. Plot (ints)</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>X vs Y</string>
+           </property>
+          </item>
+         </widget>
         </item>
-        <item row="1" column="2" colspan="3">
+        <item row="4" column="2" colspan="2">
+         <widget class="QLineEdit" name="xlabel_le">
+          <property name="text">
+           <string>Cycles</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="3">
          <widget class="QTreeWidget" name="tw_y">
           <property name="selectionMode">
            <enum>QAbstractItemView::SingleSelection</enum>
@@ -76,51 +66,35 @@
           </column>
          </widget>
         </item>
-        <item row="1" column="0" colspan="2">
-         <widget class="QTreeWidget" name="tw_x">
-          <column>
-           <property name="text">
-            <string>SE-X</string>
-           </property>
-          </column>
-         </widget>
-        </item>
-        <item row="3" column="0">
-         <widget class="QLabel" name="label_10">
-          <property name="text">
-           <string>Line Name</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="0">
+        <item row="4" column="1">
          <widget class="QLabel" name="label_8">
           <property name="text">
            <string>X Label</string>
           </property>
          </widget>
         </item>
-        <item row="5" column="0">
-         <widget class="QLabel" name="label_9">
-          <property name="text">
-           <string>Y Label</string>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="1" colspan="4">
+        <item row="5" column="2" colspan="2">
          <widget class="QLineEdit" name="ylabel_le">
           <property name="text">
            <string>$\Delta$ Thickness ($\AA$)</string>
           </property>
          </widget>
         </item>
-        <item row="4" column="1" colspan="4">
-         <widget class="QLineEdit" name="xlabel_le">
+        <item row="11" column="1">
+         <widget class="QPushButton" name="fill_cols_pb">
           <property name="text">
-           <string>Cycles</string>
+           <string>Fill Columns</string>
           </property>
          </widget>
         </item>
-        <item row="6" column="0">
+        <item row="3" column="1">
+         <widget class="QLabel" name="label_10">
+          <property name="text">
+           <string>Line Name</string>
+          </property>
+         </widget>
+        </item>
+        <item row="11" column="3">
          <widget class="QComboBox" name="ax_cb">
           <item>
            <property name="text">
@@ -134,17 +108,7 @@
           </item>
          </widget>
         </item>
-        <item row="6" column="1">
-         <widget class="QCheckBox" name="zero_correct_checkb">
-          <property name="text">
-           <string>Zero Correct</string>
-          </property>
-          <property name="checked">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="2">
+        <item row="7" column="2">
          <widget class="QCheckBox" name="line_name_checkbox">
           <property name="text">
            <string>Use Line Name</string>
@@ -154,20 +118,46 @@
           </property>
          </widget>
         </item>
-        <item row="6" column="3">
-         <widget class="QLabel" name="label_7">
-          <property name="text">
-           <string>Skip Rows: </string>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="4">
-         <widget class="QSpinBox" name="skip_rows_sb"/>
-        </item>
-        <item row="3" column="1" colspan="4">
+        <item row="3" column="2" colspan="2">
          <widget class="QLineEdit" name="line_name_le">
           <property name="text">
            <string>Extended_Plot</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="1">
+         <widget class="QLabel" name="label_9">
+          <property name="text">
+           <string>Y Label</string>
+          </property>
+         </widget>
+        </item>
+        <item row="7" column="1">
+         <widget class="QCheckBox" name="zero_correct_checkb">
+          <property name="text">
+           <string>Zero Correct</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1" colspan="2">
+         <widget class="QTreeWidget" name="tw_x">
+          <column>
+           <property name="text">
+            <string>SE-X</string>
+           </property>
+          </column>
+         </widget>
+        </item>
+        <item row="0" column="1" colspan="3">
+         <widget class="QTreeView" name="SE_treeView"/>
+        </item>
+        <item row="12" column="3">
+         <widget class="QPushButton" name="plot_pb">
+          <property name="text">
+           <string>Plot</string>
           </property>
          </widget>
         </item>
@@ -178,6 +168,13 @@
         <string>Fit Results</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_5">
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_7">
+          <property name="text">
+           <string>Skip Rows: </string>
+          </property>
+         </widget>
+        </item>
         <item row="0" column="0">
          <widget class="QComboBox" name="linetype_cb">
           <item>
@@ -212,15 +209,18 @@
           </item>
          </widget>
         </item>
-        <item row="3" column="0">
+        <item row="3" column="0" colspan="2">
+         <widget class="QTextEdit" name="fit_results_TE"/>
+        </item>
+        <item row="1" column="1">
+         <widget class="QSpinBox" name="skip_rows_sb"/>
+        </item>
+        <item row="4" column="0">
          <widget class="QPushButton" name="lin_fit_pb">
           <property name="text">
            <string>Lin. Fit</string>
           </property>
          </widget>
-        </item>
-        <item row="2" column="0" colspan="2">
-         <widget class="QTextEdit" name="fit_results_TE"/>
         </item>
         <item row="0" column="1">
          <widget class="QComboBox" name="comboBox">
@@ -241,24 +241,10 @@
           </item>
          </widget>
         </item>
-        <item row="3" column="1">
+        <item row="4" column="1">
          <widget class="QPushButton" name="linfitall_pb">
           <property name="text">
            <string>Lin. Fit. All</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="label_4">
-          <property name="text">
-           <string>Use Cols:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="QLineEdit" name="lineEdit_2">
-          <property name="text">
-           <string>0</string>
           </property>
          </widget>
         </item>
@@ -297,10 +283,72 @@
          </widget>
         </item>
         <item row="2" column="2">
-         <widget class="QComboBox" name="xaxis_cb"/>
+         <widget class="QComboBox" name="xaxis_cb">
+          <item>
+           <property name="text">
+            <string>0</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>1</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>2</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>3</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>4</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>5</string>
+           </property>
+          </item>
+         </widget>
         </item>
         <item row="3" column="2">
-         <widget class="QComboBox" name="yaxis_cb"/>
+         <widget class="QComboBox" name="yaxis_cb">
+          <item>
+           <property name="text">
+            <string>0</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>1</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>2</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>3</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>4</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>5</string>
+           </property>
+          </item>
+         </widget>
         </item>
         <item row="0" column="0" colspan="3">
          <widget class="QTableWidget" name="tableWidget">
