--- a/src/Ui_Files/Dialogs/start_dialog.ui
+++ b/src/Ui_Files/Dialogs/start_dialog.ui
@@ -16,6 +16,12 @@
   <layout class="QGridLayout" name="gridLayout">
    <item row="7" column="1">
     <widget class="QPushButton" name="CF_pb">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::TabFocus</enum>
+     </property>
      <property name="text">
       <string>Curve Fitting</string>
      </property>
@@ -72,6 +78,14 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>CF_pb</tabstop>
+  <tabstop>XPS_pb</tabstop>
+  <tabstop>XRD_pb</tabstop>
+  <tabstop>SE_pb</tabstop>
+  <tabstop>QCM_pb</tabstop>
+  <tabstop>FTIR_pb</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
