--- a/src/Ui_Files/DockWidgets/Ui/dw_FTIR.ui
+++ b/src/Ui_Files/DockWidgets/Ui/dw_FTIR.ui
@@ -28,7 +28,7 @@
         <string>IR Plot</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_2">
-        <item row="13" column="1">
+        <item row="12" column="1">
          <widget class="QLabel" name="label_6">
           <property name="text">
            <string>P (asymetry) </string>
@@ -36,20 +36,20 @@
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QPushButton" name="pushButton_2">
+         <widget class="QPushButton" name="sub_dir_pb">
           <property name="text">
            <string>Sub Plot (dir)</string>
           </property>
          </widget>
         </item>
-        <item row="16" column="3">
+        <item row="15" column="3">
          <widget class="QPushButton" name="smooth_pb">
           <property name="text">
            <string>Smooth</string>
           </property>
          </widget>
         </item>
-        <item row="16" column="1">
+        <item row="15" column="1">
          <widget class="QLabel" name="label_3">
           <property name="text">
            <string>Savitzky–Golay Filter</string>
@@ -59,7 +59,7 @@
         <item row="0" column="1" colspan="3">
          <widget class="QTreeView" name="FTIR_treeView"/>
         </item>
-        <item row="11" column="2">
+        <item row="10" column="2">
          <widget class="QSpinBox" name="lambda_sb">
           <property name="maximum">
            <number>9999999</number>
@@ -72,57 +72,42 @@
           </property>
          </widget>
         </item>
-        <item row="10" column="1" colspan="3">
+        <item row="9" column="1" colspan="3">
          <widget class="Line" name="line">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
          </widget>
         </item>
-        <item row="11" column="3">
+        <item row="1" column="3">
+         <widget class="QPushButton" name="abs_dir_pb">
+          <property name="text">
+           <string>Plot (dir)</string>
+          </property>
+         </widget>
+        </item>
+        <item row="10" column="3">
          <widget class="QPushButton" name="baseline_pb">
           <property name="text">
            <string>Baseline All</string>
           </property>
          </widget>
         </item>
-        <item row="5" column="1" colspan="2">
-         <widget class="QComboBox" name="ir_plot_cb">
-          <item>
-           <property name="text">
-            <string>Sub Plot (dir)</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Plot (dir)</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Diff Plot (dir)</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Diff (2)</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Plot</string>
-           </property>
-          </item>
+        <item row="4" column="1">
+         <widget class="QPushButton" name="spectra_pb">
+          <property name="text">
+           <string>Plot</string>
+          </property>
          </widget>
         </item>
-        <item row="11" column="1">
+        <item row="10" column="1">
          <widget class="QLabel" name="label_4">
           <property name="text">
            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;λ  (smoothness)&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
          </widget>
         </item>
-        <item row="7" column="2">
+        <item row="6" column="2">
          <widget class="QSpinBox" name="skip_sb">
           <property name="buttonSymbols">
            <enum>QAbstractSpinBox::UpDownArrows</enum>
@@ -135,31 +120,49 @@
           </property>
          </widget>
         </item>
-        <item row="7" column="1">
+        <item row="6" column="1">
          <widget class="QLabel" name="label">
           <property name="text">
            <string>Skip Every</string>
           </property>
          </widget>
         </item>
-        <item row="5" column="3">
-         <widget class="QPushButton" name="pushButton">
+        <item row="4" column="2">
+         <widget class="QPushButton" name="diff_2_pb">
           <property name="text">
-           <string>Plot or Fit FTIR</string>
+           <string>Diff Plot (2)</string>
           </property>
          </widget>
         </item>
-        <item row="14" column="1" colspan="3">
+        <item row="4" column="3">
+         <widget class="QPushButton" name="pushButton_7">
+          <property name="text">
+           <string>TBD</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QPushButton" name="diff_dir_pb">
+          <property name="text">
+           <string>Diff Plot (dir)</string>
+          </property>
+         </widget>
+        </item>
+        <item row="13" column="1" colspan="3">
          <widget class="Line" name="line_2">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
          </widget>
         </item>
-        <item row="16" column="2">
-         <widget class="QSpinBox" name="smooth_sb"/>
+        <item row="15" column="2">
+         <widget class="QSpinBox" name="smooth_sb">
+          <property name="value">
+           <number>11</number>
+          </property>
+         </widget>
         </item>
-        <item row="13" column="2">
+        <item row="12" column="2">
          <widget class="QDoubleSpinBox" name="p_sb">
           <property name="decimals">
            <number>6</number>
@@ -175,45 +178,10 @@
           </property>
          </widget>
         </item>
-        <item row="13" column="3">
+        <item row="12" column="3">
          <widget class="QLabel" name="label_7">
           <property name="text">
            <string>UNDER WORK</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="1">
-         <widget class="QPushButton" name="pushButton_5">
-          <property name="text">
-           <string>Plot</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="2">
-         <widget class="QPushButton" name="pushButton_3">
-          <property name="text">
-           <string>Diff Plot (dir)</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="3">
-         <widget class="QPushButton" name="pushButton_4">
-          <property name="text">
-           <string>Plot (dir)</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="2">
-         <widget class="QPushButton" name="pushButton_6">
-          <property name="text">
-           <string>Diff Plot (2)</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="3">
-         <widget class="QPushButton" name="pushButton_7">
-          <property name="text">
-           <string>TBD</string>
           </property>
          </widget>
         </item>
@@ -224,82 +192,7 @@
         <string>Integrate</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_4">
-        <item row="2" column="4">
-         <widget class="QDoubleSpinBox" name="doubleSpinBox_47"/>
-        </item>
-        <item row="1" column="3">
-         <widget class="QRadioButton" name="integratemode_rb">
-          <property name="text">
-           <string>Integrate Mode</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="3" rowspan="4" colspan="2">
-         <widget class="QTableWidget" name="tableWidget">
-          <property name="minimumSize">
-           <size>
-            <width>320</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>1000</width>
-            <height>1000</height>
-           </size>
-          </property>
-          <property name="rowCount">
-           <number>0</number>
-          </property>
-          <property name="columnCount">
-           <number>0</number>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="4">
-         <widget class="QComboBox" name="comboBox">
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>16777215</height>
-           </size>
-          </property>
-          <item>
-           <property name="text">
-            <string>Left Axis</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Right Axis</string>
-           </property>
-          </item>
-         </widget>
-        </item>
-        <item row="2" column="3">
-         <widget class="QDoubleSpinBox" name="doubleSpinBox_46"/>
-        </item>
-        <item row="9" column="3" colspan="2">
-         <widget class="Line" name="line_3">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="4">
-         <widget class="QPushButton" name="integrate_pb">
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>16777215</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>Integrate</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="3" colspan="2">
+        <item row="0" column="3" colspan="3">
          <widget class="QTextBrowser" name="textBrowser">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
@@ -321,6 +214,143 @@ p, li { white-space: pre-wrap; }
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Press integrate mode.  Add the spectra to the top axis then click and hold on one limit and release on the other limit and the integral will show up on the axis below as well as in the table below here,  or manually type in the limits below and press &amp;quot;Integrate&amp;quot;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
          </widget>
+        </item>
+        <item row="7" column="3" rowspan="4" colspan="3">
+         <widget class="QTableWidget" name="tableWidget">
+          <property name="minimumSize">
+           <size>
+            <width>320</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>1000</width>
+            <height>1000</height>
+           </size>
+          </property>
+          <property name="rowCount">
+           <number>0</number>
+          </property>
+          <property name="columnCount">
+           <number>0</number>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="5">
+         <widget class="QDoubleSpinBox" name="max_sb">
+          <property name="maximum">
+           <double>4000.000000000000000</double>
+          </property>
+          <property name="value">
+           <double>4000.000000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="4">
+         <widget class="QDoubleSpinBox" name="min_sb">
+          <property name="maximum">
+           <double>4000.000000000000000</double>
+          </property>
+          <property name="value">
+           <double>400.000000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="5">
+         <widget class="QPushButton" name="integrate_pb">
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Integrate</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="4">
+         <widget class="QComboBox" name="int_type_cb">
+          <item>
+           <property name="text">
+            <string>Subtraction</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Subtraction_C</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Difference</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Absolute</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="5" column="3" colspan="3">
+         <widget class="Line" name="line_3">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="3">
+         <widget class="QComboBox" name="xaxis_cb">
+          <item>
+           <property name="text">
+            <string>Half-Ints</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Ints</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="2" column="3">
+         <widget class="QComboBox" name="leftrightaxis_cb">
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <item>
+           <property name="text">
+            <string>Left Axis</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Right Axis</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="1" column="3" colspan="3">
+         <widget class="QRadioButton" name="integratemode_rb">
+          <property name="text">
+           <string>Integrate Mode</string>
+          </property>
+         </widget>
+        </item>
+        <item row="11" column="5">
+         <widget class="QPushButton" name="plottable_pb">
+          <property name="text">
+           <string>Plot Table</string>
+          </property>
+         </widget>
+        </item>
+        <item row="11" column="4">
+         <widget class="QComboBox" name="tabley_cb"/>
         </item>
        </layout>
       </widget>
