--- a/src/Ui_Files/DockWidgets/Ui/dw_QCM.ui
+++ b/src/Ui_Files/DockWidgets/Ui/dw_QCM.ui
@@ -15,20 +15,6 @@
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="8" column="1">
-     <widget class="QComboBox" name="ax_cb">
-      <item>
-       <property name="text">
-        <string>Left Ax</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Right Ax</string>
-       </property>
-      </item>
-     </widget>
-    </item>
     <item row="8" column="2">
      <widget class="QComboBox" name="plot_type_cb">
       <item>
@@ -78,17 +64,31 @@
       </item>
      </widget>
     </item>
-    <item row="8" column="0">
-     <widget class="QPushButton" name="fill_cols_pb">
-      <property name="text">
-       <string>Fill Columns</string>
-      </property>
+    <item row="8" column="1">
+     <widget class="QComboBox" name="ax_cb">
+      <item>
+       <property name="text">
+        <string>Left Ax</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Right Ax</string>
+       </property>
+      </item>
      </widget>
     </item>
     <item row="8" column="3">
      <widget class="QPushButton" name="cols_plot_pb">
       <property name="text">
        <string>Plot</string>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="0">
+     <widget class="QPushButton" name="fill_cols_pb">
+      <property name="text">
+       <string>Fill Columns</string>
       </property>
      </widget>
     </item>
@@ -374,6 +374,105 @@ p, li { white-space: pre-wrap; }
             <string>Plot Limits</string>
            </property>
           </item>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="tab">
+       <attribute name="title">
+        <string>Integrate Pressure</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout_4">
+        <item row="4" column="2">
+         <widget class="QLabel" name="label_7">
+          <property name="text">
+           <string>Num B</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="3">
+         <widget class="QDoubleSpinBox" name="waittime_sb">
+          <property name="value">
+           <double>28.000000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QDoubleSpinBox" name="threshold_sb">
+          <property name="singleStep">
+           <double>0.010000000000000</double>
+          </property>
+          <property name="value">
+           <double>0.020000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_16">
+          <property name="text">
+           <string>Threshold (torr)</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="2">
+         <widget class="QLabel" name="label_17">
+          <property name="text">
+           <string>Wait Time (s)</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QRadioButton" name="intmode_rb">
+          <property name="text">
+           <string>Integrate</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="0">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>Num A</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="1">
+         <widget class="QSpinBox" name="num_a_sb"/>
+        </item>
+        <item row="4" column="3">
+         <widget class="QSpinBox" name="num_b_sb"/>
+        </item>
+        <item row="5" column="0">
+         <widget class="QLabel" name="label_14">
+          <property name="text">
+           <string>A Dose+Purge Time</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="1">
+         <widget class="QDoubleSpinBox" name="adptime_sb"/>
+        </item>
+        <item row="5" column="2">
+         <widget class="QLabel" name="label_15">
+          <property name="text">
+           <string>B Dose+Purge Time</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="3">
+         <widget class="QDoubleSpinBox" name="bdptime_sb"/>
+        </item>
+        <item row="0" column="1">
+         <widget class="QPushButton" name="start_pb">
+          <property name="text">
+           <string>Start</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QPushButton" name="end_pb">
+          <property name="text">
+           <string>End</string>
+          </property>
          </widget>
         </item>
        </layout>
