--- a/src/Ui_Files/DockWidgets/Ui/dw_FTIR.ui
+++ b/src/Ui_Files/DockWidgets/Ui/dw_FTIR.ui
@@ -21,7 +21,7 @@
        <bool>true</bool>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -210,8 +210,8 @@
            <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'.AppleSystemUIFont'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Press integrate mode.  Add the spectra to the top axis then click and hold on one limit and release on the other limit and the integral will show up on the axis below as well as in the table below here,  or manually type in the limits below and press &amp;quot;Integrate&amp;quot;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'.AppleSystemUIFont'; font-size:13pt;&quot;&gt;Press integrate mode.  Add the spectra to the top axis then click and hold on one limit and release on the other limit and the integral will show up on the axis below as well as in the table below here,  or manually type in the limits below and press &amp;quot;Integrate&amp;quot;&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
          </widget>
         </item>
@@ -554,20 +554,6 @@ p, li { white-space: pre-wrap; }
         <item row="2" column="6">
          <widget class="QDoubleSpinBox" name="doubleSpinBox_26"/>
         </item>
-        <item row="0" column="5">
-         <widget class="QRadioButton" name="radioButton_5">
-          <property name="text">
-           <string>Peak 4</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="6">
-         <widget class="QRadioButton" name="radioButton_6">
-          <property name="text">
-           <string>Peak 5</string>
-          </property>
-         </widget>
-        </item>
         <item row="9" column="3">
          <widget class="QDoubleSpinBox" name="doubleSpinBox_23"/>
         </item>
@@ -590,13 +576,6 @@ p, li { white-space: pre-wrap; }
         </item>
         <item row="8" column="2">
          <widget class="QDoubleSpinBox" name="doubleSpinBox_15"/>
-        </item>
-        <item row="0" column="2">
-         <widget class="QRadioButton" name="radioButton_2">
-          <property name="text">
-           <string>Peak 1</string>
-          </property>
-         </widget>
         </item>
         <item row="4" column="6">
          <widget class="QDoubleSpinBox" name="doubleSpinBox_35"/>
@@ -636,24 +615,10 @@ p, li { white-space: pre-wrap; }
         <item row="1" column="6">
          <widget class="QDoubleSpinBox" name="doubleSpinBox_5"/>
         </item>
-        <item row="0" column="3">
-         <widget class="QRadioButton" name="radioButton_3">
-          <property name="text">
-           <string>Peak 2</string>
-          </property>
-         </widget>
-        </item>
         <item row="9" column="1">
          <widget class="QLabel" name="label_16">
           <property name="text">
            <string>high</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="4">
-         <widget class="QRadioButton" name="radioButton_4">
-          <property name="text">
-           <string>Peak 3</string>
           </property>
          </widget>
         </item>
@@ -768,6 +733,41 @@ p, li { white-space: pre-wrap; }
          <widget class="QPushButton" name="pushButton_10">
           <property name="text">
            <string>Fit</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QCheckBox" name="checkBox">
+          <property name="text">
+           <string>Peal 1</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3">
+         <widget class="QCheckBox" name="checkBox_2">
+          <property name="text">
+           <string>Peak 2</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="4">
+         <widget class="QCheckBox" name="checkBox_3">
+          <property name="text">
+           <string>Peak 3</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="5">
+         <widget class="QCheckBox" name="checkBox_4">
+          <property name="text">
+           <string>Peak 4</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="6">
+         <widget class="QCheckBox" name="checkBox_5">
+          <property name="text">
+           <string>Peak 5</string>
           </property>
          </widget>
         </item>
